@@ -256,6 +256,11 @@ sub displayStories {
 			print ' </B>comment', $cc > 1 ? 's' : '' if $cc;
 
 		}
+
+		if ($thissection ne $I{defaultsection}) {
+			my($SEC) = getSection($thissection);
+			print qq' | <A HREF="$I{rootdir}/$thissection/">$SEC->{title}</A>';
+		}
 		print qq' | <A HREF="$I{rootdir}/admin.pl?op=edit&sid=$sid">Edit</A>'
 			if $I{U}{aseclev} > 100;
 
